--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ author:
 #  weibo: http://weibo.com/orangeissweet
   github: http://github.com/shuzhou
 #  music: http://site.douban.com/linanya
-  linkedin: https://www.linkedin.com/pub/anya-lin/81/91/232
+#  linkedin: https://www.linkedin.com/pub/anya-lin/81/91/232
 
 # 站点信息
 title: 张书洲的博客
